GPF-1371 Fix AGP ordering and visibility on new template

--- a/gpfjs/src/app/agp-table/agp-table.component.css
+++ b/gpfjs/src/app/agp-table/agp-table.component.css
@@ -51,6 +51,13 @@
   background-color: #eee;
 }
 
+.header-cell {
+  max-width: 75%;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 multiple-select-menu {
   top: 50px;
 }
